set default scroll position to utmost right

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="tategaki.css">
+    <script type="text/javascript" src="scripts.js"></script>
   </head>
   <body>
-    <div class="box">
+    <div id="box" class="box">
       <div class="exp">
 
 <p id="L2">　両手で顔を庇い、目をギュッと閉じていたハジメは、ざわざわと騒ぐ無数の気配を感じてゆっくりと目を開いた。そして、周囲を呆然と見渡す。</p>
