--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="height=device-height, initial-scale=1, user-scalable=no">
+    <meta name="viewport" content="height=device-height, initial-scale=1,
+     maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" href="tategaki.css">
     <script type="text/javascript" src="scripts.js"></script>
   </head>
